# nextlabs_backend

./: Procfile  db.sqlite3  manage.py  pyproject.toml  railway.json  requirements.txt
main/: admin.py  models.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_rename_is_admin_user_is_superuser_and_more.py  0003_user_groups_user_user_permissions.py  0004_alter_user_name.py  0005_alter_app_image.py  0006_alter_app_appcategory.py  0007_task_screen_shot.py  0008_rename_screen_shot_task_image.py  0009_rename_image_task_screen_shot.py  0010_app_appsubcategory_alter_task_user.py  0011_alter_category_name_alter_subcategory_name.py
nextlabs_backend/: asgi.py  settings.py  urls.py  wsgi.py
web/: flutter_bootstrap.js  flutter_service_worker.js  main.dart.js
